[project]
name = "pgportfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "scipy>=1.8.0",
    "cvxopt>=1.3.0",
    "tqdm>=4.62.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
]